--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".kitchen.KitchenMainActivity"></activity>
         <activity android:name=".livingroom.LivingRoom"></activity>
-        <activity android:name=".BaseActivity"></activity>
-
     </application>
 
 </manifest>
