--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".kitchen.KitchenMainActivity"></activity>
-        <activity android:name=".livingroom.LivingRoom"></activity>
+        <activity android:name=".kitchen.KitchenMainActivity" />
+        <activity android:name=".livingroom.LivingRoom" />
+        <activity android:name=".House.House"></activity>
     </application>
 
 </manifest>
