This is the initial commit for the automobile.
added activity
added listview for items
pressing on item opens dialog box with more info
added 2 edit texts for name and description of item
added button for adding items to list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".kitchen.KitchenMainActivity" />
-        <activity android:name=".livingroom.LivingRoom" />
-
-        <activity android:name=".livingroom.TV.TV" />
-        <activity android:name=".livingroom.Lamps.Lamps" />
-        <activity android:name=".livingroom.Blinding.Blinding" />
-
-
-        <activity android:name=".House.House"></activity>
+        <activity android:name=".automobile.automobile" />
     </application>
 
 </manifest>
