--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         <activity android:name=".kitchen.KitchenMainActivity" />
         <activity android:name=".livingroom.LivingRoom" />
         <activity android:name=".House.House"></activity>
+        <activity android:name=".House.Garage"></activity>
+        <activity android:name=".House.TempIn"></activity>
+        <activity android:name=".House.TempOut"></activity>
     </application>
 
 </manifest>
