--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".kitchen.KitchenMainActivity" />
-        <activity android:name=".livingroom.LivingRoom" />
 
+        <activity android:name=".livingroom.LivingRoom" />
         <activity android:name=".livingroom.TV.TV" />
         <activity android:name=".livingroom.Lamps.Lamps" />
         <activity android:name=".livingroom.Blinding.Blinding" />
@@ -28,6 +28,9 @@
         <activity android:name=".House.Garage"></activity>
         <activity android:name=".House.TempIn"></activity>
         <activity android:name=".House.TempOut"></activity>
+
+        <activity android:name=".automobile.automobile" />
+
     </application>
 
 </manifest>
