--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,20 @@
             </intent-filter>
         </activity>
         <activity android:name=".kitchen.KitchenMainActivity" />
+
         <activity android:name=".livingroom.LivingRoom" />
+        <activity android:name=".livingroom.TV.TV" />
+        <activity android:name=".livingroom.Lamps.Lamps" />
+        <activity android:name=".livingroom.Blinding.Blinding" />
+
+
         <activity android:name=".House.House"></activity>
         <activity android:name=".House.Garage"></activity>
         <activity android:name=".House.TempIn"></activity>
         <activity android:name=".House.TempOut"></activity>
+
+        <activity android:name=".automobile.automobile" />
+
     </application>
 
 </manifest>
