added fragment for temp control added database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         </activity>
         <activity android:name=".kitchen.KitchenMainActivity" />
         <activity android:name=".automobile.automobile" />
+        <activity android:name=".automobile.fragmentLayout" />
+        <activity android:name=".automobile.FragPhone"></activity>
     </application>
 
 </manifest>
