--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,15 @@
 /build
 /captures
 .externalNativeBuild
+web-browsers.xml
+vcs.xml
+ide.general.xml
+gradle.run.settings.xml
+editor.codeinsight.xml
+diff.xml
+debugger.xml
+colors.scheme.xml
+androidStudioFirstRun.xml
+IntelliLang.xml
+/inspection
+/_windows
