--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sayadev.finalproject">
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,9 +20,9 @@
         <activity android:name=".kitchen.KitchenMainActivity" />
         <activity android:name=".livingroom.LivingRoom" />
         <activity android:name=".House.House"></activity>
-        <activity android:name=".House.Garage"></activity>
-        <activity android:name=".House.TempIn"></activity>
-        <activity android:name=".House.TempOut"></activity>
+        <activity android:name=".House.GarageFragment"></activity>
+        <activity android:name=".House.TempInFragment"></activity>
+        <activity android:name=".House.TempOutFragment"></activity>
     </application>
 
 </manifest>
