+ Added option for device type when adding + Added option to device info to open config + Finished Coffee Make config screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".kitchen.KitchenMainActivity" />
+        <activity android:name=".kitchen.KitchenMainActivity" />S
+        <activity android:name=".kitchen.KitchenDeviceConfig" />
 
         <activity android:name=".livingroom.LivingRoom" />
         <activity android:name=".livingroom.TV.TV" />
